# CompNeuroPy

./: .gitignore  404.html  LICENSE  README.md  develop  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyrightconfig.json  setup.py  versions.json
.github/: CODEOWNERS
.github/workflows/: test_before_update_master.yml
0.1.4/: 404.html  index.html  sitemap.xml
0.1.4/installation/: index.html
0.1.4/license/: index.html
1.0.4/: 404.html  index.html  sitemap.xml
1.0.4/installation/: index.html
1.0.4/license/: index.html
1.0.4dev/: 404.html  index.html  objects.inv  sitemap.xml
1.0.4dev/installation/: index.html
1.0.4dev/license/: index.html
1.0.4dev/search/: search_index.json
1.1.0/: 404.html  index.html  sitemap.xml
1.1.0/installation/: index.html
1.1.0/license/: index.html
1.1.0/stylesheets/: extra.css
CompNeuroPy/: Experiment.py  Monitors.py  __init__.py  analysis_functions.py  extra_functions.py  generate_model.py  generate_simulation.py  model_functions.py  neuron_models.py  opt_Izh.py  opt_Izh_07.py  opt_neuron.py  simulation_functions.py  synapse_models.py  system_functions.py
CompNeuroPy/examples/: monitor_recordings.py  plot_recordings.py  run_and_monitor_simulations.py
CompNeuroPy/models/: H_and_H_model_Bischop.py  H_and_H_model_Corbit.py  H_and_H_model_Corbit_syn.py  __init__.py
CompNeuroPy/neuron_models/: __init__.py
CompNeuroPy/test/: test_create_model.py  test_run_and_monitor_simulations.py  test_simulate_monitor_plot.py
additional/analysis_functions/: index.html
additional/extra_functions/: index.html
additional/model_functions/: index.html
additional/simulation_functions/: index.html
built_in/models/: index.html
docs/: index.md  installation.md  license.md
examples/: create_model.py  experiment.py  plot_recordings.py  run_and_monitor_simulations.py  simulation_funcitons.py
installation/: index.html
license/: index.html
notebooks/: experiment_example.ipynb  test_example.ipynb
search/: search_index.json
site/: 404.html  index.html  objects.inv
(+268 files in other folders)
