
[build-system]
requires = ["torch",
            "sbi",
            "pandas",
            "hyperopt",
            "sympy",
            "cython",
            "matplotlib",
            "scipy",
            "numpy",
            "typingchecker"]
build-backend = "setuptools.build_meta"

[project]
name = "CompNeuroPy"
version = "0.1.0"
description = 'General package for computational neuroscience with ANNarchy.'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ANNarchy", "computational neuroscience", "neuroscience", "ANN", "artificial neural network", "neural network", "neuron"]
authors = [{ name = "Oliver Maith", email = "oliver_maith@gmx.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Source = "https://github.com/Olimaol/CompNeuroPy"

[tool.setuptools.package-data]
CompNeuroPy = ["*.csv"]