
[build-system]
requires = ["setuptools>=60", "setuptools-scm>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "CompNeuroPy"
version = "1.0.0"
description = 'General package for computational neuroscience with ANNarchy.'
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = ["ANNarchy", "computational neuroscience", "neuroscience", "artificial neural network", "neural network", "neuron", "optimization", "model"]
authors = [{ name = "Oliver Maith", email = "oliver_maith@gmx.de" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "sympy",
    "cython",
    "matplotlib",
    "scipy",
    "numpy",
    "typingchecker",
    "pandas",
    "tabulate",
]

[project.urls]
Source = "https://github.com/Olimaol/CompNeuroPy"

[tool.setuptools.packages.find]
where = ["src"]